the y-axis of the grid was not loading in properly whatever I did; when i went down to the lower rows, the upper rows jsut went outside the scroll area and wasnt visible. The change in code may not look drastic, but it took A LOT of meddling around and 2 hours of starting at the screen to get a fix (it was an align-items: center that was forcing the upper content to move out). A lot of debugging, and changed the 3d layouts a bit to help with better viewing and overall containment in the first flex (which holds the grid)

--- a/src/Home.css
+++ b/src/Home.css
@@ -14,7 +14,7 @@ html {
   width: 100vw;
 
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   min-width: 0vw;
   min-height: 0vh;
@@ -34,6 +34,8 @@ html::-webkit-scrollbar {
   
   width: 100%;
   height: 100%;
+
+  margin-left: 3vw;
 
 }
 
