--- a/src/Play.css
+++ b/src/Play.css
@@ -15,8 +15,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
+  overflow-y: hidden;
+
+}
 
 .body,
 html::-webkit-scrollbar {
@@ -27,7 +29,7 @@ html::-webkit-scrollbar {
 .Outer_Box_Flex{
 
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 
   height: 99vh;
@@ -35,10 +37,12 @@ html::-webkit-scrollbar {
 
   border-radius: 4vh;
 
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow-y: scroll;
+  overflow-x: scroll;
 
-  perspective: 10000px;  
+  transform: rotateX(35deg) rotateZ(-5deg);
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease;
 
 }
 
@@ -48,17 +52,9 @@ html::-webkit-scrollbar {
   grid-template-columns: repeat(9, auto); 
   grid-template-rows: repeat(9, auto);
 
-  overflow-x: auto;
-  overflow-y: auto;
+  overflow-x: scroll;
+  overflow-y: scroll;
   
-}
-
-.Outer_Box_Grid{
-
-  transform: rotateX(30deg) rotateZ(-20deg);
-  transform-style: preserve-3d;
-  transition: transform 0.5s ease;
-
 }
 
 .Outer_Box_Flex::-webkit-scrollbar{
@@ -74,8 +70,8 @@ html::-webkit-scrollbar {
 }
 
 .Room_Visited {
-  height: 65vh; 
-  width: 40vw; 
+  height: 55vh; 
+  width: 30vw; 
   background-color: #272323;
   box-sizing: border-box;
 
@@ -165,8 +161,6 @@ html::-webkit-scrollbar {
   height: 20px;
   width: 100%;
   background-color: #1B263B;
-
-
 
 }
 
